<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#64A8A2"
    tools:context=".DifficultyActivity">

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="279dp"
        android:layout_height="150dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/number_guess_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/easyButton"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FF9800"
        android:text="@string/easy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#F44336"
        android:text="@string/back_difficulty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/mediumButton"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FF9800"
        android:text="@string/medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toEndOf="@+id/easyButton"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.006"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/hardButton"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FF9800"
        android:text="@string/hard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/easyButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/speedButton"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:backgroundTint="#FF9800"
        android:text="@string/speed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toEndOf="@+id/hardButton"
        app:layout_constraintTop_toBottomOf="@+id/mediumButton"
        app:layout_constraintVertical_bias="0.047" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/select_difficulty"
        android:textColor="#F44336"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo" />
</androidx.constraintlayout.widget.ConstraintLayout>