<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#64A8A2"
    tools:context=".SettingsActivity">

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="279dp"
        android:layout_height="150dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/number_guess_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButtonSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#F44336"
        android:text="@string/back_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo"
        app:layout_constraintVertical_bias="0.967" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="359dp"
        android:layout_height="127dp"
        android:text="@string/welcome_to_the_game"
        android:textColor="#DA3C3C"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo"
        app:layout_constraintVertical_bias="0.16" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="335dp"
        android:layout_height="32dp"
        android:text="@string/to_play_choose_a_difficulty_and_then_set_the_range"
        android:textColor="#EF6C00"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo"
        app:layout_constraintVertical_bias="0.465" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/then_try_to_guess_the_secret_number"
        android:textColor="#F1DB1D"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo"
        app:layout_constraintVertical_bias="0.596" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_to_beat_your_highscore"
        android:textColor="#1D491E"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo"
        app:layout_constraintVertical_bias="0.709" />

</androidx.constraintlayout.widget.ConstraintLayout>