<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#64A8A2"
    tools:context=".GuessActivity">

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="279dp"
        android:layout_height="150dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/number_guess_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/answerBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo"
        app:layout_constraintVertical_bias="0.244"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/confirmButtonGuessing"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#F44336"
        android:onClick="buttonClicked"
        android:text="@string/confirm_guessing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerBox"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/guessesLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guesses_left"
        android:textColor="#F44336"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmButtonGuessing"
        app:layout_constraintVertical_bias="0.192" />

    <TextView
        android:id="@+id/guessTheNumberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_the_number"
        android:textColor="#F44336"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/answerBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/guessesLeftNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#F44336"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toEndOf="@+id/guessesLeft"
        app:layout_constraintTop_toBottomOf="@+id/confirmButtonGuessing"
        app:layout_constraintVertical_bias="0.192" />

    <TextView
        android:id="@+id/randomNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#64A8A2"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>